--- a/ja/DRAW.html
+++ b/ja/DRAW.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
 <title>がめんにいたずらしてみよう！ DRAW</title>
-<link rel="stylesheet" type="text/css" href="https://ichigojam.github.io/print/ja/ichigojamlist.css">
+<link rel="stylesheet" type="text/css" href="ichigojamlist.css">
+<script src="ichigojamlist.js"></script>
 </head><body>
 
 <h1>がめんにいたずらしてみよう！ DRAW</h1>
@@ -8,7 +9,10 @@
 <section>
 がめんにせんをかいてみよう！
 DRAWコマンドでせんをかくことができるよ
-<div class=ichigojam>DRAW 1,1,70,70</div>
+<div id="step-1"></div>
+<script>make15("step-1", f2s(function() {/*
+DRAW 1,1,70,70
+*/}))</script>
 ２つばしょをしていしてあげよう<br>
 さいしょの1,1でさいしょのばしょ。<br>
 つぎの70,70,でつぎのばしょをしていしよう。
@@ -16,21 +20,29 @@ DRAWコマンドでせんをかくことができるよ
 
 <section>
 ばしょのつぎに0とくわえると、せんをけせるよ。
-<div class=ichigojam>DRAW 1,1,70,70,0</div>
+<div id="step-2"></div>
+<script>make15("step-2", f2s(function() {/*
+DRAW 1,1,70,70,0
+*/}))</script>
 うえのほうのもじがきえたかな？
 </section>
 
 <section>
 FORコマンドでくりかえしせんをかこう！
-<div class=ichigojam>10 FOR I=1TO11 STEP 3:DRAW I,1,I*10,70:NEXT
-</div>
+<div id="step-3"></div>
+<script>make15("step-3", f2s(function() {/*
+10 FOR I=1TO11 STEP 3:DRAW I,1,I*10,70:NEXT
+*/}))</script>
 RUNでじっこうしてみると、どうなるかな？
 </section>
 
 <section>
 FORコマンドをふたつかいて＃をかいてみよう！
-<div class=ichigojam>10 FOR I=1TO10 STEP 3:DRAW I*10,1,10*I,70:NEXT
-20 FOR I=2TO8 STEP 3:DRAW 1,I*5,70,I*5:NEXT</div>
+<div id="step-4"></div>
+<script>make15("step-4", f2s(function() {/*
+10 FOR I=1TO10 STEP 3:DRAW I*10,1,10*I,70:NEXT
+20 FOR I=2TO8 STEP 3:DRAW 1,I*5,70,I*5:NEXT
+*/}))</script>
 </section>
 
 <section>
