small fix for A5 one page

--- a/ja/CHR.html
+++ b/ja/CHR.html
@@ -50,8 +50,7 @@ abcdefghijklmnopqrstuvwxyz
 </section>
 
 <section>
-えもじのもじコードをしらべたい？<br>
-プログラムですぐかいけつ！
+えもじのもじコードをしらべたい？プログラムですぐかいけつ！
 <div id="step-5"></div>
 <script>make15("step-5", f2s(function() {/*
 FOR I=224 TO 255:?CHR$(I);I;:NEXT
