--- a/ja/index.html
+++ b/ja/index.html
@@ -105,6 +105,7 @@ body {
 <section>
 じっくりうちこみ コース<br>
 - <a href=KAWAKUDARI.html>かわくだりゲーム</a><br>
+- <a href=SHOOTING.html>シューティングゲーム</a><br>
 - <a href=JUMP.html>ジャンプゲーム</a><br>
 - <a href=JANKEN.html>ジャンケンゲーム</a><br>
 - <a href=ACCHIMUITE.html>あっちむいてほい</a><br>
