--- a/ja/SHOOTING.html
+++ b/ja/SHOOTING.html
@@ -11,7 +11,8 @@ UFOがせめてくるメインループ (ひこうき=ALT+G、UFO=ALT+H)<br>
 <div class=ichigojam>10 CLS:X=15
 20 LC X,23:?"🚀";
 40 LC RND(32),0:?"🛸"
-50 SCROLL2:GOTO20
+50 SCROLL2
+60 GOTO20
 </div>
 </section>
     
