--- a/ja/index.html
+++ b/ja/index.html
@@ -106,6 +106,7 @@ body {
 じっくりうちこみ コース<br>
 - <a href=KAWAKUDARI.html>かわくだりゲーム</a><br>
 - <a href=SHOOTING.html>シューティングゲーム</a><br>
+- <a href=TYPE-MEIJIN.html>タイプめいじんゲーム</a><br>
 - <a href=JUMP.html>ジャンプゲーム</a><br>
 - <a href=JANKEN.html>ジャンケンゲーム</a><br>
 - <a href=ACCHIMUITE.html>あっちむいてほい</a><br>
