added OUT2 ロボットをうごかそう

--- a/ja/index.html
+++ b/ja/index.html
@@ -88,6 +88,7 @@ body {
 - <a href=PWM.html>サーボをあやつる PWM</a><br>
 - <a href=IN.html>0か1かのにゅうりょく IN（イン）</a><br>
 - <a href=ANA.html>りょうのにゅうりょく ANA（アナ）</a><br>
+- <a href=OUT2.html>ロボットをうごかそう OUT</a><br>
 - <a href=OUTANA1.html>じどうブレーキをつくる OUTとANA</a><br>
 - <a href=OUTANA2.html>サーボとセンサーで電子工作</a><br>
 - <a href=CHAT.html>2だいつないでチャットしよう</a><br>
